--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "googleapis": "^39.2.0",
     "next": "9.5.5",
     "react": "16.14.0",
     "react-dom": "16.14.0"
